--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <Center>
-<FONT color="red"> <a href="google.com"> DONT relax </FONT> </a></Center>
+<FONT color="red"> <a href="https://google.com"> DONT relax </FONT> </a></Center>
