--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<Center>
-<FONT color="red"> <a href="https://google.com"> <marquee>  DONT relax </marquee> </FONT> </a></Center>
+<h1> <Center>
+<FONT color="red"> <a href="https://google.com"> <marquee>  DONT relax </marquee> </FONT> </a></Center> </h1>
