--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h1> <Center>
+<body bgcolor="blue" > <h1> <center>
 <FONT color="red"> <a href="https://olaelectric.com/"> <marquee>  DON'T relax Buy OLA electric scooter </marquee> </FONT> </a> </h1>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DLDWvuQ0tW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-  </Center>
+  </center> </body>
