--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body bgcolor="royalgreen" > <h1> <center>
+<body bgcolor="green" > <h1> <center>
 <FONT color="orange"> <a href="https://olaelectric.com/"> <marquee>  DON'T relax Buy OLA electric scooter </marquee> </FONT> </a> </h1>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DLDWvuQ0tW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
