--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body bgcolor="green" > <h1> <center>
-<font color="orange"> <a href="https://olaelectric.com/"> <marquee>  DON'T relax Buy OLA electric scooter </marquee> </font> </a> </h1>
+<font color="orange"> <a color:red" href="https://olaelectric.com/"> <marquee>  DON'T relax Buy OLA electric scooter </marquee> </font> </a> </h1>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DLDWvuQ0tW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
   </center> </body>
